fix sq issue #2